Closing in on a player spawn